--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,8 +7,11 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="theme-color" content="#4287f5" />
+    <link rel="apple-touch-icon" href="/pwa-icons/apple-icon-180.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dublin Bus</title>
+    <title>Transit Task</title>
   </head>
   <body>
     <div id="root"></div>
