--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
   </head>
   <body>
     <div id="root"></div>
+    <!-- Google Maps Script -->
+    <script
+      async
+      src="https://maps.googleapis.com/maps/api/js?key=%VITE_GOOGLE_MAPS_API_KEY%&libraries=places&language=en"
+    ></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
