SocketIo implemented on news and issues

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#4287f5" />
     <link rel="apple-touch-icon" href="/pwa-icons/apple-icon-180.png" />
+    <!-- Add these iOS-specific meta tags -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="apple-mobile-web-app-title" content="Transit Task" />
+    <!-- End of added tags -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Transit Task</title>
   </head>
@@ -20,6 +25,7 @@
       async
       src="https://maps.googleapis.com/maps/api/js?key=%VITE_GOOGLE_MAPS_API_KEY%&libraries=places&language=en"
     ></script>
+    <script src="/register-sw.js"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
